--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -32,7 +32,7 @@ jobs:
     #   run: tox
 
     - name: Deploy to PyPI
-      if: ${{ github.event_name == 'push' && contains(github.ref, 'tags') }}
+      # if: ${{ github.event_name == 'push' && contains(github.ref, 'tags') }}
       env:
         TWINE_USERNAME: __token__
         TWINE_PASSWORD: ${{ secrets.PYPI_API_TOKEN }}
