--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -39,5 +39,6 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         python -m pip install twine
+        python -m pip install wheel
         python setup.py sdist bdist_wheel
         twine upload dist/*
